<resources>
    <string name="app_name">testCloudFirebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_product">Nazwa</string>
    <string name="wartosc_na">Wartość odżywcze na:</string>
    <string name="wartosc_energetyczna">Wartość energetyczna</string>
    <string name="tluszcze">Tłuszcze</string>
    <string name="nasycone">Nasycone</string>
    <string name="weglowodany">Weglowodany</string>
    <string name="cukry">Cukry</string>
    <string name="bialka">Białka</string>
    <string name="sol">Sól</string>
    <string name="save">Zapisz</string>
    <string name="zrób_zdjecie">  Zrób Zdjecie  </string>
    <string name="gram">g</string>
    <string name="kacl">kacl</string>
    <string name="emptyEditText">Pole nie może być puste</string>
    <string name="sto">100</string>
    <string name="plec">Płeć</string>
    <string name="wiek">Wiek</string>
    <string name="wzrost">Wzrost</string>
    <string name="waga">Waga</string>
    <string name="ocenaAktywności">Ocena Twojej Aktywnosci</string>
    <string name="cel">Twój cel</string>
    <string name="home">Home</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="add">Dodaj</string>
    <string name="search">Szukaj</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>




    <string name="open">open</string>
    <string name="close">close</string>


</resources>