<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="imie"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:srcCompat="@tools:sample/avatars" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/plec"
                android:textColor="#000"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButtonFemale"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wiek"
                android:textColor="#000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextWiek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="lat"
                android:textColor="#000"
                android:textSize="16sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/wzrost"
                android:textColor="#000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextWzrost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="cm"
                android:textColor="#000"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/waga"
                android:textColor="#000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextWaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="kg"
                android:textColor="#000"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="none"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:text="@string/ocenaAktywności"
                android:textColor="#000"


                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinnerAktywnosc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="none"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:text="@string/cel"
                android:textColor="#000"


                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinnerCel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>