<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingProductActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Waga:"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/etWaga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etWaga"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/textViewUsername"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWaga">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:text="@string/name_product"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_nazwa"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wartosc_na"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sto"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wartosc_energetyczna"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_wartoscEnergetyczna"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/kacl"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tluszcze"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_tluszcze"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/nasycone"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_nasycone"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/weglowodany"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_wegle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/cukry"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cukry"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/bialka"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_bialko"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>


                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"

                    android:text="@string/sol"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_sol"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/gram"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gram"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/etWaga"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>